# soccer-dashboard

./: .gitignore  Homepage.py  README.md  Requirements.txt  app.py  create_team_pickles.py  gps_stats.py  homepage.py  packages.txt  player_gps_report.py  pyproject.toml  requirements.txt  run_arima_experiment.py
arima_forecasting/: arima_model.py
backend_functions/: arima_model.py  create_team_pickles.py  get_team_statistics.py  player_gps_report.py  player_statistics.py  read_in_data.py  run_arima_experiment.py
components/: Overview_Injuries.py
components/Dataset_Overview/: Overview_Injuries.py
components/Player_View/: Player_Injuries.py
components/common/: menu.py
components/dataset_overview/: overview_common.py  overview_injuries.py
components/player_view/: player_common.py  player_injuries.py
data/: .gitignore
data-analysis/: README.md
pages/: 10_Dataset Overview.py  10_Dataset_Overview.py  20_Player_View.py  30_Team_View.py  40_Researcher_View.py  dataset_overview.py  dataset_overview_game_performance.py  dataset_overview_illnesses.py  dataset_overview_injuries.py  dataset_overview_training_load.py  dataset_overview_wellness.py  player_view.py  researcher_view.py  team_view.py
preprocessing/: data_loader.py  read_in_data.py
src/: loading_SoccerMon.sh  pipeline_raw.py
src/pages/: dataset_statistics.py  gps_information.py  homepage.py  player_gps_report.py  player_information.py  (+2 more)
streamlit_app/: Description.txt  app.py
team_statistics/: get_team_statistics.py  player_statistics.py
utils/: Data_fetcher.py  data_fetcher.py
(+99 files in other folders)
