[tool.poetry]
name = "soccer-dashboard"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"
packages = [{include = "soccer_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
