[tool.poetry]
name = "soccer-dashboard"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.14,<3.9.7 || >3.9.7,<3.12"
streamlit = "^1.12.2"
black = "^22.8.0"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
numpy = "^1.23.3"
scipy = "1.9.1"
statsmodels = "^0.13.2"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"
hmmlearn = "^0.2.7"
plotly = "^5.10.0"
joblib = "^1.2.0"
protobuf = ">=3.20.0,<3.20.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
